k8s/base/network-policies/gateway-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: gateway-policy

spec:
  podSelector:
    matchLabels:
      app: api-gateway

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - ports:
        - protocol: TCP
          port: 8080

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: auth-service
      ports:
        - protocol: TCP
          port: 8087

    - to:
        - podSelector:
            matchLabels:
              app: order-service
      ports:
        - protocol: TCP
          port: 8081

    - to:
        - podSelector:
            matchLabels:
              app: inventory-service
      ports:
        - protocol: TCP
          port: 8082

    - to:
        - podSelector:
            matchLabels:
              app: pricing-service
      ports:
        - protocol: TCP
          port: 8089

    - to:
        - podSelector:
            matchLabels:
              app: delivery-service
      ports:
        - protocol: TCP
          port: 8086

    - to:
        - podSelector:
            matchLabels:
              app: websocket-service
      ports:
        - protocol: TCP
          port: 8088

    - to:
        - podSelector:
            matchLabels:
              app: redis
      ports:
        - protocol: TCP
          port: 6379
