k8s/base/network-policies/kafka-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: kafka-policy

spec:
  podSelector:
    matchLabels:
      app: kafka

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - order-service
                  - inventory-service
                  - payment-service
                  - notification-service
                  - delivery-service
                  - saga-orchestrator
                  - websocket-service
                  - kafka-ui
      ports:
        - protocol: TCP
          port: 9092
