k8s/base/network-policies/postgres-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: postgres-policy

spec:
  podSelector:
    matchLabels:
      app: postgres

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - auth-service
                  - order-service
                  - inventory-service
                  - payment-service
                  - notification-service
                  - delivery-service
                  - saga-orchestrator
      ports:
        - protocol: TCP
          port: 5432
